VA-1728 Prevent tooltip overflow
And add margin

--- a/styles/h5p-tooltip.css
+++ b/styles/h5p-tooltip.css
@@ -8,7 +8,6 @@
   text-align: left;
 
   padding: 0.38rem 0.63rem;
-  margin-left: 4px;
   white-space: normal;
   word-break: break-word;
   width: max-content;
